--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,11 @@
   z-index: 999;
   height: 75px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-user-drag: none;
 }
 #wrap header nav ul {
   display: flex;
@@ -626,6 +631,11 @@
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.7);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-user-drag: none;
 }
 #wrap #popup.active {
   display: flex;
