--- a/styles/index.scss
+++ b/styles/index.scss
@@ -88,6 +88,7 @@
                         @include flex-col; gap:10px;
                         padding: 10px;
                         .row_in { 
+                            @include flex-row; gap: 15px;
                             .years { font-size: $font-size-12; color: #999;}
                             .name {}
                         }
