--- a/styles/index.scss
+++ b/styles/index.scss
@@ -286,7 +286,7 @@
                             }
                             .project_03 {
                                 .desktop_mockup {
-                                    max-width:4000px;height:1400px;top:-18%; right:-15%;
+                                    max-width:1050px;height:auto;top:18%; right:10%;
                                     img {width: 100%; height: 100%;object-fit: cover;}
                                 }
                                 .left_info{
